syntax = "proto3";

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/api/proto";

message HealthCheckRequest {
    string service = 1;
}

message HealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
    }
    ServingStatus status = 1;
}
